--- a/src/main/resources/orodent/clientrelationmanager/hello-view.fxml
+++ b/src/main/resources/orodent/clientrelationmanager/hello-view.fxml
@@ -9,12 +9,12 @@
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
    <TextField fx:id="searchField" />
-   <Label fx:id="status" />
+   <Label fx:id="status" alignment="CENTER" />
 
     <Label fx:id="resultField" />
-   <HBox spacing="20.0">
+   <HBox alignment="CENTER" spacing="20.0">
       <children>
-          <Button onAction="#onHelloButtonClick" text="Start Server" />
+          <Button onAction="#onHelloButtonClick" prefHeight="100.0" text="Start Server" />
          <Button mnemonicParsing="false" onAction="#onStopServer" text="Stop Server" />
       </children>
    </HBox>
