--- a/src/main/resources/orodent/clientrelationmanager/hello-view.fxml
+++ b/src/main/resources/orodent/clientrelationmanager/hello-view.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="orodent.clientrelationmanager.HelloController">
+<VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
@@ -12,11 +12,9 @@
    <Label fx:id="status" alignment="CENTER" />
 
     <Label fx:id="resultField" />
-   <HBox alignment="CENTER" spacing="20.0">
-      <children>
-          <Button onAction="#onHelloButtonClick" prefHeight="100.0" text="Start Server" />
-         <Button mnemonicParsing="false" onAction="#onStopServer" text="Stop Server" />
-      </children>
-   </HBox>
-   <Button mnemonicParsing="false" onAction="#onEmbeddedTest" text="embedded test" />
+    <HBox alignment="CENTER" spacing="20.0">
+        <Button prefHeight="100.0" text="Start Server"/>
+        <Button mnemonicParsing="false" text="Stop Server"/>
+    </HBox>
+   <Button mnemonicParsing="false" text="embedded test" />
 </VBox>
