--- a/src/main/resources/orodent/clientrelationmanager/hello-view.fxml
+++ b/src/main/resources/orodent/clientrelationmanager/hello-view.fxml
@@ -13,8 +13,9 @@
 
     <Label fx:id="resultField" />
     <HBox alignment="CENTER" spacing="20.0">
-        <Button prefHeight="100.0" text="Start Server"/>
-        <Button mnemonicParsing="false" text="Stop Server"/>
+        <Button prefHeight="100.0" text="Start Server" />
+        <Button mnemonicParsing="false" text="Stop Server" />
     </HBox>
    <Button mnemonicParsing="false" text="embedded test" />
+   <ListView prefHeight="200.0" prefWidth="200.0" />
 </VBox>
